logs/lemon-filebrowser.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/filebrowser'...
Compiling './lib/python3.5/site-packages/filebrowser/admin.py'...
***   File "./lib/python3.5/site-packages/filebrowser/admin.py", line 122
    os.path.join(settings.MEDIA_ROOT, self.upload_to), 0755)
                                                          ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/filebrowser/locale'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ru'...
Listing './lib/python3.5/site-packages/filebrowser/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/filebrowser/static'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/css'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/images'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/images/icons'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/images/types'...
Listing './lib/python3.5/site-packages/filebrowser/static/filebrowser/js'...
Listing './lib/python3.5/site-packages/filebrowser/templates'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser/include'...
Listing './lib/python3.5/site-packages/filebrowser/templates/filebrowser/tags'...
Listing './lib/python3.5/site-packages/filebrowser/templatetags'...
Listing './lib/python3.5/site-packages/lemon_filebrowser-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
